--- a/dit-admin/pom.xml
+++ b/dit-admin/pom.xml
@@ -5,8 +5,8 @@
     <groupId>site.ahzx</groupId>
     <artifactId>dit-auth</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>dit-auth</name>
-    <description>dit-auth</description>
+    <name>dit-admin</name>
+    <description>dit-admin</description>
     <properties>
         <java.version>17</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -23,10 +23,10 @@
             <artifactId>dit-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-security</artifactId>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -74,7 +74,7 @@
         <!-- cloud -->
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
-                <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
         </dependency>
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
@@ -82,7 +82,7 @@
         </dependency>
     </dependencies>
 
-    
+
     <repositories>
         <repository>
             <id>aliyun-public</id>
@@ -95,7 +95,7 @@
             </snapshots>
         </repository>
     </repositories>
-    
+
     <dependencyManagement>
         <dependencies>
             <dependency>
