--- a/dit-auth/src/main/resources/application.yml
+++ b/dit-auth/src/main/resources/application.yml
@@ -22,5 +22,10 @@ spring:
   config:
     import: nacos:dit-auth.yaml
 
+jwt:
+  secret: yuzhouwudichaojidashuaibihuxuefengshiye # 请替换为实际的JWT密钥
+  expiration-seconds: 86400 # token有效期(秒)
+  token-header: Authorization
+  token-prefix: "Bearer "
 
 
