--- a/dit-system/src/main/resources/application.yml
+++ b/dit-system/src/main/resources/application.yml
@@ -42,6 +42,7 @@ mybatis-flex:
 logging:
   level:
     root: INFO # 全局日志级别
+    site.ahzx: DEBUG
     org.springframework: INFO      # Spring 框架日志
     com.mybatisflex: INFO           # MyBatis-Flex 日志
     org.apache.ibatis: INFO         # MyBatis 日志
