--- a/dit-system/src/main/resources/application.yml
+++ b/dit-system/src/main/resources/application.yml
@@ -4,6 +4,13 @@ server:
 spring:
   application:
     name: dit-system-service
+  data:
+    redis:
+      host: localhost
+      port: 16379
+      password: 123456  # 如果没有密码可省略
+      timeout: 5000
+
   datasource:
     url: jdbc:mysql://192.168.8.202:3306/dit_config?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
     username: dcm
