system ss6只保留白名单和perm 完成前端页面部门显示、用户显示 拆分 baseentity ，独立出tenantid继承

--- a/dit-system/src/main/resources/application.yml
+++ b/dit-system/src/main/resources/application.yml
@@ -53,3 +53,5 @@ logging:
     org.springframework: INFO      # Spring 框架日志
     com.mybatisflex: INFO           # MyBatis-Flex 日志
     org.apache.ibatis: INFO         # MyBatis 日志
+    org.springframework.security: DEBUG  # 开启 Spring Security debug 日志
+    org.springframework.security.web: DEBUG  # 更详细的 Web 安全日志
