--- a/dit-auth/src/main/resources/application.yml
+++ b/dit-auth/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
     name: dit-auth-service
   data:
     redis:
-      host: 192.168.8.202
+      host: localhost
       port: 16379
       password: 123456  # 如果没有密码可省略
       timeout: 5000
