--- a/dit-system/pom.xml
+++ b/dit-system/pom.xml
@@ -187,6 +187,9 @@
                 <configuration>
                     <source>17</source>
                     <target>17</target>
+                    <compilerArgs>
+                        <arg>-parameters</arg> <!-- @PathVariable -->
+                    </compilerArgs>
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
