--- a/dit-system/src/main/resources/application.yml
+++ b/dit-system/src/main/resources/application.yml
@@ -12,8 +12,8 @@ spring:
       timeout: 5000
 
   datasource:
-    url: jdbc:mysql://192.168.8.202:3306/dit_config?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
-    username: dcm
+    url: jdbc:mysql://192.168.8.200:33306/dit_cloud?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
+    username: root
     password: N8xvZ2Q4kP5mT7wL
     driver-class-name: com.mysql.cj.jdbc.Driver
 
