--- a/dit-common/pom.xml
+++ b/dit-common/pom.xml
@@ -7,109 +7,14 @@
     <groupId>site.ahzx</groupId>
     <artifactId>dit-common</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
-    <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <lombok.version>1.18.24</lombok.version>
-        <jjwt.version>0.12.5</jjwt.version>
-        <spring-boot.version>3.4.5</spring-boot.version>
-        <mybatis-flex.version>1.11.0</mybatis-flex.version> <!-- 添加缺失的版本属性 -->
-    </properties>
-
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-dependencies</artifactId>
-                <version>${spring-boot.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-            <!-- mybatis-flex -->
-<!--            <dependency>-->
-<!--                <groupId>com.mybatis-flex</groupId>-->
-<!--                <artifactId>mybatis-flex-dependencies</artifactId>-->
-<!--                <version>${mybatis-flex.version}</version>-->
-<!--                <type>pom</type>-->
-<!--                <scope>import</scope>-->
-<!--            </dependency>-->
-        </dependencies>
-    </dependencyManagement>
-
-    <dependencies>
-        <!-- JJWT: 用于生成/解析 Token -->
-        <dependency>
-            <groupId>io.jsonwebtoken</groupId>
-            <artifactId>jjwt-api</artifactId>
-            <version>${jjwt.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>io.jsonwebtoken</groupId>
-            <artifactId>jjwt-impl</artifactId>
-            <version>${jjwt.version}</version>
-            <scope>runtime</scope>
-        </dependency>
-        <dependency>
-            <groupId>io.jsonwebtoken</groupId>
-            <artifactId>jjwt-jackson</artifactId>
-            <version>${jjwt.version}</version>
-            <scope>runtime</scope>
-        </dependency>
-
-        <!-- Lombok -->
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>${lombok.version}</version>
-            <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-        </dependency>
-
-        <!--spring boot-->
-        <dependency>
-            <groupId>jakarta.annotation</groupId>
-            <artifactId>jakarta.annotation-api</artifactId>
-        </dependency>
-
-        <!-- Spring Boot AOP Starter -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-aop</artifactId>
-        </dependency>
-
-        <!-- 仅引入 Spring Security 核心依赖，不触发自动配置 -->
-        <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-core</artifactId>
-        </dependency>
-
-<!--        &lt;!&ndash; mybatis-flex &ndash;&gt;-->
-<!--        <dependency>-->
-<!--            <groupId>com.mybatis-flex</groupId>-->
-<!--            <artifactId>mybatis-flex-spring-boot3-starter</artifactId>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>com.mybatis-flex</groupId>-->
-<!--            <artifactId>mybatis-flex-processor</artifactId>-->
-<!--            <scope>provided</scope>-->
-<!--        </dependency>-->
-        <dependency>
-            <groupId>com.mysql</groupId>
-            <artifactId>mysql-connector-j</artifactId>
-            <scope>runtime</scope>
-        </dependency>
-
-        <!-- Spring Security OAuth2 JOSE -->
-        <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-oauth2-jose</artifactId>
-        </dependency>
-    </dependencies>
+    <description>
+        dit-common通用模块
+    </description>
+    <modules>
+        <module>dit-common-json</module>
+        <module>dit-common-core</module>
+    </modules>
 
 </project>
