全面改造成若依plus的形状，有没有问题再说. 尝试重建common... 完成logout，token加入redis黑名单

--- a/dit-auth/src/main/resources/application.yml
+++ b/dit-auth/src/main/resources/application.yml
@@ -34,4 +34,14 @@ jwt:
   token-header: Authorization
   token-prefix: "Bearer "
 
+logging:
+  level:
+    root: INFO # 全局日志级别
+    site.ahzx: DEBUG
+    org.springframework: INFO      # Spring 框架日志
+    com.mybatisflex: INFO           # MyBatis-Flex 日志
+    org.apache.ibatis: INFO         # MyBatis 日志
+    org.springframework.security: DEBUG  # 开启 Spring Security debug 日志
+    org.springframework.security.web: DEBUG  # 更详细的 Web 安全日志
+
 
