--- a/dit-gateway/pom.xml
+++ b/dit-gateway/pom.xml
@@ -87,6 +87,11 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <!-- ✅ Redis Reactive 支持（WebFlux 必须使用 reactive）-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis-reactive</artifactId>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
